--- a/css/main.css
+++ b/css/main.css
@@ -10,29 +10,20 @@ body {
     color: #8bffff;
     font-size: 1.2em; }
 
-.encabezado-h1:hover {
-  font-size: 18px;
-  transition: 2s; }
-
 .inicio {
-  background-image: filter blur(6px);
-  background: url(/img/zapateria.jpg);
   background-size: cover;
+  background-image: url(../img/zapateria.jpg);
   background-repeat: no-repeat;
   padding: 10% 20% 0% 25%;
   height: 100vh; }
   .inicio .inicio-title {
     color: #3e3e3e;
-    font-family: 'Rubik', sans-serif;
-    font-size: 19em;
+    font-family: 'PT Serif', serif;
+    font-size: 25em;
     text-shadow: -1px 1px 1px cyan; }
     .inicio .inicio-title .title-name {
       color: black;
       text-shadow: -1px 1px 1px whitesmoke; }
-
-@media (max-width: 900px) {
-  .inicio-title {
-    background-size: cover; } }
 
 #sobreNosotros {
   height: 100vh; }
@@ -40,16 +31,18 @@ body {
     height: 500px;
     width: 500px;
     object-fit: cover; }
-  #sobreNosotros footer p {
-    margin-bottom: 100px; }
+  #sobreNosotros footer {
+    margin-top: 500px;
+    position: relative;
+    bottom: 0; }
+    #sobreNosotros footer p {
+      margin-bottom: 100px; }
 
 .contenedor {
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100vh;
-  margin: 0 auto; }
+  margin: 0 auto;
+  align-items: stretch; }
   .contenedor figure {
     position: relative;
     height: 250px;
@@ -87,6 +80,13 @@ body {
         max-width: 220px;
         margin: auto; }
 
+.contenedor {
+  display: grid;
+  margin: 0px 40px;
+  margin: 50px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr; }
+
 .contenedor figure:hover > .capa {
   opacity: 1;
   visibility: visible; }
@@ -98,26 +98,34 @@ body {
 .contenedor figure:hover > img {
   transform: scale(1.3); }
 
-.contenedor {
-  display: grid;
-  align-items: center;
-  margin: 0px 40px;
-  margin: 50px;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr; }
+.encabezado-h1:hover {
+  font-size: 18px;
+  transition: 2s; }
 
-@media (max-width: 1200px) {
+footer ul li a:hover {
+  color: whitesmoke; }
+
+@media (max-width: 1250px) {
   .contenedor {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
-    margin-bottom: 500px; } }
+    padding-bottom: 100%; } }
 
 @media (max-width: 900px) {
   .contenedor {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr  1fr 1fr;
-    margin-bottom: 1500px;
+    padding-bottom: 2800px;
+    padding-left: 180px; } }
+
+@media (max-width: 600px) {
+  .contenedor {
+    display: grid;
     justify-content: center;
-    margin-left: 180px; } }
+    padding-bottom: 2700px; } }
+
+@media (max-width: 400px) {
+  .inicio-title {
+    background-size: cover; } }
