--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,4 +1,6 @@
 
+// ESTILOS
+
 body{
     background-color: #121C2C;
 }
@@ -15,22 +17,18 @@ body{
     
 }
 
-.encabezado-h1:hover{
-    font-size: 18px;
-    transition: 2s;
-}
+
 
 .inicio{
-        background-image: filter blur(6px);
-        background: url(/img/zapateria.jpg); 
         background-size: cover;
+        background-image: url(../img/zapateria.jpg); 
         background-repeat: no-repeat;
         padding: 10% 20% 0% 25%;        
         height: 100vh;
     .inicio-title{
         color: rgb(62, 62, 62);
-        font-family:'Rubik', sans-serif;
-        font-size: 19em;
+        font-family: 'PT Serif', serif;
+        font-size: 25em;
         text-shadow: -1px 1px 1px rgb(0, 255, 255);
         .title-name{
             color: rgb(0, 0, 0);
@@ -39,11 +37,7 @@ body{
     }
 }
 
-@media (max-width: 900px) {
-    .inicio-title{
-        background-size: cover;
-    }
-}
+
 
 #sobreNosotros{
     height: 100vh;
@@ -53,8 +47,12 @@ body{
         object-fit: cover;
     }
     footer{
+        margin-top: 500px;
+        position: relative;
+        bottom: 0;
         p{
            margin-bottom: 100px; 
+           
         }
         
     }
@@ -63,11 +61,9 @@ body{
 
 .contenedor{
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
     margin: 0 auto;
+    align-items: stretch;
     figure{
         position:relative;
         height: 250px;
@@ -110,8 +106,16 @@ body{
         }  
     }
 }
+.contenedor{
+    display: grid;
+    margin: 0px 40px;
+    margin: 50px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
 
 
+// HOVER
 
 .contenedor figure:hover > .capa {
     opacity: 1;
@@ -125,22 +129,24 @@ body{
     transform: scale(1.3);
 }
 
-
-.contenedor{
-    display: grid;
-    align-items: center;
-    margin: 0px 40px;
-    margin: 50px;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+.encabezado-h1:hover{
+    font-size: 18px;
+    transition: 2s;
 }
 
-@media (max-width: 1200px){
+
+footer ul li a:hover{
+    color: whitesmoke;
+ }
+
+// MEDIAQUERIES
+
+@media (max-width: 1250px){
     .contenedor {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr;
-        margin-bottom: 500px;
+        padding-bottom: 100%;
     }
     
 }
@@ -150,9 +156,21 @@ body{
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr 1fr 1fr  1fr 1fr;
-        margin-bottom: 1500px;
+        padding-bottom: 2800px;
+        padding-left: 180px;
+    } 
+}
+
+@media (max-width: 600px) {
+    .contenedor{
+        display: grid;
         justify-content: center;
-        margin-left: 180px;
+        padding-bottom: 2700px;
     }
-    
+}
+
+@media (max-width: 400px) {
+    .inicio-title{
+        background-size: cover;
+    }
 }
